# vsy-bullshit

./: PROTOCOL  README
BBServer/: Makefile.PL  config.yml
BBServer/lib/: BBServer.pm
BBServer/t/: 001_base.t  002_index_route.t
BBServer/views/: index.tt
BBServer/views/layouts/: main.tt
Doku/: doku.tex  qt-klassendiagramm.dia  slides.tex  slides_vorlage.tex
JavaClientBullshitBingo/: README
JavaClientBullshitBingo/src/hsma/ss2011/vsy/: BullshitButton.java  CreateGamePanel.java  GameManagement.java  GameManagementFrame.java  GamePanel.java  GameSession.java  JavaBullshitBingo.java  LobbyPanel.java  LoginPanel.java  ManagementPanel.java  MenuBar.java  RequestHandler.java
QTClient/: .gitignore  CMakeLists.txt  HowToBuild.txt  LICENSE  README  ToDo.txt
QTClient/include/: BingoConnectionWidget.h  BingoGameWidget.h  BingoLobbyWidget.h  BingoMainWindow.h  BingoWidget.h  JSONRequestTypes.h  JSONRequests.h  Network.h
QTClient/qjson/: qjson_export.h
QTClient/resources/: QTClient.rc  bingo.qrc
QTClient/src/: BingoConnectionWidget.cpp  BingoGameWidget.cpp  BingoLobbyWidget.cpp  BingoMainWindow.cpp  Network.cpp  main.cpp
QTClient/ui/: BingoMainUI.ui  ConnectionWidget.ui  GameWidget.ui  LobbyWidget.ui
Server/: Makefile.PL
Server/AJAXGUI/: bingo.js  index.html
Server/lib/: BBServer.pm  Game.pm  Games.pm  Player.pm  PlayerState.pm  Players.pm
Server/lib/BBServer/Handler/: Base.pm  CheckWinner.pm  CreateGame.pm  CurrentGames.pm  GUI.pm  GetWordlists.pm  JoinGame.pm  LeaveGame.pm  MakeMove.pm  RegisterPlayer.pm
Server/t/: 001-register-player.t  002-game.t
Server/wordlists/: default.txt  wahl.txt
bullshitdroid/: AndroidManifest.xml  Rakefile
bullshitdroid/res/layout/: creategame.xml  game.xml  main.xml  simple_list_item_1.xml  voice_input.xml  voice_status.xml  wordbutton.xml
bullshitdroid/res/menu/: main.xml
bullshitdroid/res/values/: ids.xml  strings.xml
bullshitdroid/res/xml/: preferences.xml
bullshitdroid/src/org/hsma/vsy/bullshitdroid/: CreateGame.mirah  Game.mirah  LevenshteinDistance.mirah  MAsyncTask.mirah  MatchRater.mirah  PlayGame.mirah  Preferences.mirah  RecognizerMatch.mirah  Server.mirah  Start.mirah
